2008-11-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/db_adddel.h: Removed 
	the unused signal_user_requested_delete signal.
	on_MenuPopup_activate_Delete() (also called when the button is pressed):
	Actually call user_requested_delete(), so that the user can delete a 
	list row. I forgot to do this when moving the other stuff down into 
	DbAddDel.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/299853
	(elmergato)

2008-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom_developer.glade: Corrected a button name to avoid a crash 
	when editing reports.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/300054

2008-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: dialog_import_csv: Added a lable for advice about 
	the expected data format.
	* glom/dialog_import_csv.cc: Constructor: Generate advice text in the 
	label, showing an example of the expected ISO date format.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/299591

2008-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Mark a tooltip as translatable in the initial dialog.
	Ubuntu bug https://bugs.launchpad.net/ubuntu/+source/glom/+bug/299556

2008-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.c: 
	sanity_check_date_text_representation_uses_4_digit_years(): 
	Default to dd/mm/yyyy for dates when the translator has not provided 
	a 4-digit-year date syntax for the locale, printing a warning that the 
	default might not be suitable. This seems better than failing.

2008-11-21  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/glomconversions.[h|cc]:
	Added sanity_check_date_parsing() and 
	sanity_check_date_text_representation_uses_4_digit_years().
	* glom/main.cc: Use them to show informative warnings at startup.
	The translators comment for %x mentions those warnings now too.